# Data-Science-Template

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  setup.cfg
{{cookiecutter.directory_name}}/: .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.directory_name}}/.github/workflows/: something.yml
{{cookiecutter.directory_name}}/config/: main.yaml
{{cookiecutter.directory_name}}/notebooks/: mlflow.ipynb
{{cookiecutter.directory_name}}/src/: helpers.py  train.py  train_model.py  training_pipeline.py
{{cookiecutter.directory_name}}/src/data/: housing.py
{{cookiecutter.directory_name}}/src/features/: feature.py
{{cookiecutter.directory_name}}/src/models/: experiments.py  train.py
{{cookiecutter.directory_name}}/tests/: test_load_data.py  test_train_model.py
