[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "1.0.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
notebook = "^6.5.3"
pre-commit = "^3.2.1"
scikit-learn = "^1.2.2"
mlflow = "^2.2.2"
python-dotenv = "^1.0.0"
boto3 = "^1.26.100"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.1"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py310']
